[package]
name = "rocket-sat"
version = "0.1.0"
authors = ["cristianandrione <cristian.andrione@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7", features = ["blocking"] }
rocket = "0.4.5"
serde = "1.0.114"
tokio = "0.2.22"
error-chain = "0.12.4"
