[package]
name = "eolic_sat"
version = "0.1.0"
authors = ["Cristian133 <cristian.andrione@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket="0.4.5"
rocket_cors = "0.5.2"
sgp4="0.3.1"
ureq = { version = "1.3.0", features = ["json"]}
